Added Add functionality

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
 <body>
   <div id="start" class="start">    <!--Top navigation bar, links to home and creators-->
     <img src="icon-clipboard-512.webp" style="justify-content: left; display: inline;">
-    <button class="navBarButton" onclick="window.open('index.html')">HOME</button>
-    <button class="navBarButton" onclick="window.open('creators.html')">CREATORS</button>
+    <button class="navBarButton" onclick="window.location.href='home.html'">HOME</button>
+    <button class="navBarButton" onclick="window.location.href='creators.html'">CREATORS</button>
   </div>  
 
   <div id="TitleBar">
@@ -25,18 +25,23 @@
     <h3>Organize your day.</h3>
   </div>
 
-
+  <form>
   <input type="text" class="inputText" placeholder="Add your Task.....">
-
   <!--<span onclick="newElement()" class="addButton">Add Task</span> -->
 
-  <button class="addButton"> Add Task!</button>
+  <button id="addButton"> Add Task!</button>
+  </form>
+  
+  <ul id="myUL">
+    <li>Finish Assignment.</li> 
+  </ul> 
 
 
+<!--
   <div class="foot">
     <h2>Created by Shivam, Shashank, Aman, Yuvraj and Kumar</h2>
   </div>
-
+-->
 </body>
 
 </html>
