Added Add functionality

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <h3>Organize your day.</h3>
   </div>
 
-
+  <form>
   <input type="text" class="inputText" placeholder="Add your Task.....">
-
   <!--<span onclick="newElement()" class="addButton">Add Task</span> -->
 
-  <button class="addButton"> Add Task!</button>
+  <button id="addButton"> Add Task!</button>
+  </form>
   
   <ul id="myUL">
     <li>Finish Assignment.</li>
@@ -41,11 +41,11 @@
   </ul> 
 
 
-
+<!--
   <div class="foot">
     <h2>Created by Shivam, Shashank, Aman, Yuvraj and Kumar</h2>
   </div>
-
+-->
 </body>
 
 </html>
