Added some text

--- a/creators.html
+++ b/creators.html
@@ -21,7 +21,7 @@
             <div class="container">
               <h2>Shivam Sarraf</h2>
               <p class="title">Member</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>Lorem ipsum dolor sit amet consectetur.</p>
               <p>Email: shivam.sarraf@gmail.com</p>
               <p>Contact No: +91-7897785352</p>
               <p><button class="button" onclick="window.open('https://github.com/ShivamSarraf')">GitHub</button></p>
@@ -33,7 +33,7 @@
             <div class="container">
               <h2>Shashank Shridhar</h2>
               <p class="title">Member</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p>2nd year aspiring full stack developer. FPS Games and Cup Noodles *chefs kiss*</p>
               <p>Email: shashankshridhar1@gmail.com</p>
               <p>Contact No: +91-9667400306</p>
               <p><button class="button" onclick="window.open('https://github.com/coffeemage-lol')">GitHub</button></p>
@@ -55,7 +55,7 @@
         <div class="column">
             <div class="card">
               <div class="container">
-                <h2>Aman Kumar</h2>
+                <h2>Aman Singh</h2>
                 <p class="title">Member</p>
                 <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                 <p>Email: amansingh9876545@gmail.com</p>
