Added strike-through functionality

--- a/home.html
+++ b/home.html
@@ -33,15 +33,9 @@
   </form>
   
   <ul id="myUL">
-    <li>Finish Assignment.</li> 
+    <li>Sample Task- Add tasks above!</li> 
   </ul> 
 
-
-<!--
-  <div class="foot">
-    <h2>Created by Shivam, Shashank, Aman, Yuvraj and Kumar</h2>
-  </div>
--->
 </body>
 
 </html>
